--- a/src/components/Overview/Overview.module.css
+++ b/src/components/Overview/Overview.module.css
@@ -3,7 +3,6 @@
 }
 
 .header {
-  width: 429px;
   background-image: linear-gradient(308deg, #8a8af4, #3159b8);
   font-family: 'Gordita';
   font-size: 40px;
