--- a/src/components/Token/Token.module.css
+++ b/src/components/Token/Token.module.css
@@ -43,3 +43,9 @@
     margin-top: 0;
   }
 }
+
+@media only screen and (max-device-width : 812px) {
+  .container {
+    margin-top: 70px;
+  }
+}
